fix: adjust alignment of new icons

--- a/web-server/css/slycat.scss
+++ b/web-server/css/slycat.scss
@@ -399,7 +399,6 @@ slycat-navbar nav .alert pre {
 }
 
 .slycat-table-ingestion thead th .select-all-button {
-  display: block;
   cursor: pointer;
 }
 
